--- a/1.Competitions/1.Janatahack: Healthcare Analytics/Train/Janatahack_Healthcare_Analytics.ipynb
+++ b/1.Competitions/1.Janatahack: Healthcare Analytics/Train/Janatahack_Healthcare_Analytics.ipynb
@@ -29,7 +29,7 @@
     "shc=pd.read_csv('Second_Health_Camp_Attended.csv')\n",
     "thc=pd.read_csv('Third_Health_Camp_Attended.csv')\n",
     "train=pd.read_csv('Train.csv')\n",
-    "test=pd.read_csv('../test_l0Auv8Q.csv')"
+    "test=pd.read_csv('../test.csv')"
    ]
   },
   {
@@ -4189,13 +4189,7 @@
       "205/205 [==============================] - 1s 3ms/step - loss: 0.4533 - val_loss: 0.4254\n",
       "Epoch 5/500\n",
       "205/205 [==============================] - 1s 3ms/step - loss: 0.4537 - val_loss: 0.4267\n",
-      "Epoch 6/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 6/500\n",
       "205/205 [==============================] - 1s 3ms/step - loss: 0.4543 - val_loss: 0.4266\n",
       "Epoch 7/500\n",
       "205/205 [==============================] - 1s 3ms/step - loss: 0.4544 - val_loss: 0.4263\n",
