--- a/1.Competitions/1.Janatahack: Healthcare Analytics/Train/50 percent variables/Janatahack_Healthcare_Analytics.ipynb
+++ b/1.Competitions/1.Janatahack: Healthcare Analytics/Train/50 percent variables/Janatahack_Healthcare_Analytics.ipynb
@@ -29,7 +29,7 @@
     "shc=pd.read_csv('../Second_Health_Camp_Attended.csv')\n",
     "thc=pd.read_csv('../Third_Health_Camp_Attended.csv')\n",
     "train=pd.read_csv('../Train.csv')\n",
-    "test=pd.read_csv('../../test_l0Auv8Q.csv')"
+    "test=pd.read_csv('../../test.csv')"
    ]
   },
   {
